--- a/_posts/2013-12-30-issue-one.md
+++ b/_posts/2013-12-30-issue-one.md
@@ -60,7 +60,7 @@ Finally, if you’re struggling to balance the needs of your designers, develope
 
 # 'Bots Around The World
 
-<a href="http://yonder.io" title="A round-table discussion for leaders of distributed companies and teams"><img class="feature" src="../images/yonder-image.jpg" alt="Yonder" /></a>
+<a href="http://yonder.io" title="A round-table discussion for leaders of distributed companies and teams"><img id="bodyImage" class="feature" src="../images/yonder-image.jpg" alt="Yonder" /></a>
 
 Once the holidays have settled down, Lullabot is hosting [Yonder](http://yonder.io), an event for leaders of distributed and remote teams. We’ll have attendees from companies including GitHub, nGen Works, Upworthy, Woothemes, Thunderbolt Labs and more. We’ll be sharing ideas, best practices and discussing the Future of Work! It’s taking place this January 28-29 in San Diego, and you can find out more at [http://yonder.io](http://yonder.io).
 
